tests/errors/compiler/pnt_before_array/pnt_before_array.c
int main()
{
	int *arr[10];
	return 0;
}
